--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-.env/
+__pycache__/
+*.pyc
 db.sqlite3
-db.sqlite3
+code/
+*.env
+media/
+static/
+node/
+*.log
+*.req_meta
+activate_django.bat
+activate.bat
