--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cloudinary==1.44.1
 dj-database-url==3.0.1
 Django==5.2.5
 django-cors-headers==4.7.0
+django-environ==0.12.0
 gunicorn==23.0.0
 idna==3.10
 packaging==25.0
